compiler/e2e/test/snapshot/semantic_element/implements_qualified_identifier/marker/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: member in marker implementation is not allowed
  ╭─ compiler/e2e/test/snapshot/semantic_element/implements_qualified_identifier/marker/main.pnx:5:21
  │
4 │ final implements Test[int32]:
  │                  ----------- this is a marker `implements`
5 │     public function someFunction():
  │                     ^^^^^^^^^^^^ `main::[implements Test[int32]]::someFunction` cannot be declared in this `implements`
  │
  = marker implementations cannot have members

error: the marker implements is not final
   ╭─ compiler/e2e/test/snapshot/semantic_element/implements_qualified_identifier/marker/main.pnx:10:12
   │
10 │ implements Test[float32]
   │            ^^^^^^^^^^^^^
   │
   = add the `final` keyword to the `implements`

error: Compilation aborted due to 2 error(s)



stdout:
